[gd_scene load_steps=26 format=2]

[ext_resource path="res://levels/Room.gd" type="Script" id=1]
[ext_resource path="res://core/gui/Gui.tscn" type="PackedScene" id=2]
[ext_resource path="res://core/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://core/camera/third_person_camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://core/camera/first_person_camera.gd" type="Script" id=5]
[ext_resource path="res://core/room/wall/Wall.tscn" type="PackedScene" id=6]
[ext_resource path="res://core/room/wall/WallOffMaterial.tres" type="Material" id=7]
[ext_resource path="res://core/room/pillar/Pillar.tscn" type="PackedScene" id=8]
[ext_resource path="res://core/room/innerwall/InnerWall.tscn" type="PackedScene" id=9]
[ext_resource path="res://core/room/pickup/Pickup.tscn" type="PackedScene" id=10]
[ext_resource path="res://levels/Roof.gd" type="Script" id=11]
[ext_resource path="res://core/room/switch/RoofSwitch.tscn" type="PackedScene" id=12]

[sub_resource type="Environment" id=1]

background_mode = 1
background_sky_custom_fov = 0.0
background_color = Color( 0, 0.587891, 0.875, 1 )
background_energy = 1.0
background_canvas_max_layer = 0
ambient_light_color = Color( 0.03125, 0.03125, 0.03125, 1 )
ambient_light_energy = 0.3
ambient_light_sky_contribution = 0.0
fog_enabled = true
fog_color = Color( 0.34375, 0.34375, 0.34375, 1 )
fog_sun_color = Color( 0, 0, 0, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 3.0
fog_depth_curve = 0.233259
fog_transmit_enabled = false
fog_transmit_curve = 0.34151
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 50.0
fog_height_curve = 0.277392
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = true
auto_exposure_scale = 0.5
auto_exposure_min_luma = 0.1
auto_exposure_max_luma = 3.08
auto_exposure_speed = 0.51
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = false
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = true
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.06
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 0
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0
_sections_unfolded = [ "Ambient Light", "Auto Exposure", "Background", "Fog", "Glow", "Tonemap" ]

[sub_resource type="CubeMesh" id=2]

size = Vector3( 2, 2, 2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="SpatialMaterial" id=3]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 0.164062, 0.164062, 0.164062, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo", "Ambient Occlusion", "Anisotropy", "Clearcoat", "Emission", "NormalMap", "Rim", "Roughness", "Subsurf Scatter" ]

[sub_resource type="ConvexPolygonShape" id=4]

points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="CubeMesh" id=5]

size = Vector3( 2, 2, 2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="ConvexPolygonShape" id=6]

points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="ConvexPolygonShape" id=7]

points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="Animation" id=8]

resource_name = "close"
length = 2.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Roof1:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -0.906349 ), Vector3( 0, 0, 0.0156379 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Roof2:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 2.92014 ), Vector3( 0, 0, 2.02437 ) ]
}

[sub_resource type="Animation" id=9]

length = 30.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Roof1:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 30 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0.0208416 ), Vector3( 0, 0, -0.906349 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Roof2:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 30 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 2.02989 ), Vector3( 0, 0, 2.92014 ) ]
}

[sub_resource type="CubeMesh" id=10]

size = Vector3( 2, 2, 2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="SpatialMaterial" id=11]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 0, 0.429688, 0.0369263, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.62
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Roughness" ]

[sub_resource type="ConvexPolygonShape" id=12]

points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="BoxShape" id=13]

extents = Vector3( 333.962, 28.4447, 272.076 )

[node name="Room" type="Spatial"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.237747, 0, -0.889668 )
script = ExtResource( 1 )

[node name="GUI" parent="." index="0" instance=ExtResource( 2 )]

[node name="Player" parent="." index="1" instance=ExtResource( 3 )]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 8.51688, 0.766723 )
collision_layer = 1024

[node name="Camera" parent="Player" index="2" instance=ExtResource( 4 )]

script = ExtResource( 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="2"]

environment = SubResource( 1 )

[node name="Floor" type="MeshInstance" parent="." index="3"]

editor/display_folded = true
transform = Transform( 150, 0, 0, 0, 1, 0, 0, 0, 150, 0, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = SubResource( 3 )
_sections_unfolded = [ "Transform", "material" ]

[node name="StaticBody" type="StaticBody" parent="Floor" index="0"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Floor/StaticBody" index="0"]

shape = SubResource( 4 )
disabled = false

[node name="LightWall1" parent="." index="4" instance=ExtResource( 6 )]

transform = Transform( 55, 0, 0, 0, -4.37114e-08, -100, 0, 1, -4.37114e-06, 0, 0, 95 )
material/0 = ExtResource( 7 )

[node name="LightWall2" parent="." index="5" instance=ExtResource( 6 )]

transform = Transform( 27.2307, 0.868834, -3.79779e-06, 0, -4.37114e-08, -100, -47.7859, 0.495103, -2.16417e-06, 82.5392, -4.54747e-13, 47.0348 )
material/0 = ExtResource( 7 )

[node name="LightWall3" parent="." index="6" instance=ExtResource( 6 )]

transform = Transform( -27.8291, 0.862544, -3.7703e-06, 0, -4.37114e-08, -100, -47.4399, -0.505983, 2.21172e-06, 82.3941, 2.28882e-05, -48.5837 )
material/0 = ExtResource( 7 )

[node name="Wall1" parent="." index="7" instance=ExtResource( 6 )]

transform = Transform( 55, 0, 0, 0, -4.37114e-08, -100, 0, 1, -4.37114e-06, 0, 0, -95 )
material/0 = ExtResource( 7 )

[node name="Wall2" parent="." index="8" instance=ExtResource( 6 )]

transform = Transform( 27.2307, 0.868834, -3.79779e-06, 0, -4.37114e-08, -100, -47.7859, 0.495103, -2.16417e-06, -82.5392, 0, -47.0348 )
material/0 = ExtResource( 7 )

[node name="Wall3" parent="." index="9" instance=ExtResource( 6 )]

transform = Transform( -27.8291, 0.862544, -3.7703e-06, 0, -4.37114e-08, -100, -47.4399, -0.505983, 2.21172e-06, -81.9416, 0, 48.0684 )
material/0 = ExtResource( 7 )

[node name="Pillar" parent="." index="10" instance=ExtResource( 8 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -42.4149, -40.2135, 55.4763 )

[node name="Pillar2" parent="." index="11" instance=ExtResource( 8 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.13853, -4.32043, 78.1655 )

[node name="Pillar4" parent="." index="12" instance=ExtResource( 8 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.0455, -25.1547, 2.25922 )

[node name="Pillar5" parent="." index="13" instance=ExtResource( 8 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 92.0367, 28.9824, -15.6883 )

[node name="InnerWall" parent="." index="14" instance=ExtResource( 9 )]

transform = Transform( -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 24.8921, 6.45397, 8.92538 )

[node name="Pickup" parent="." index="15" instance=ExtResource( 10 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -42.3729, 21.8933, 56.085 )

[node name="Pickup2" parent="." index="16" instance=ExtResource( 10 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.4607, 78.5271, -39.3381 )

[node name="Pickup3" parent="." index="17" instance=ExtResource( 10 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -75.8696, 62.428, -31.558 )

[node name="SUN" type="DirectionalLight" parent="." index="18"]

transform = Transform( 100, 0, 0, 0, -4.37114e-08, 100, 0, -1, -4.37114e-06, 0, 162.514, 2.00599 )
layers = 1
light_color = Color( 1, 0.970947, 0.535156, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Light" ]

[node name="Roof" type="Spatial" parent="." index="19"]

editor/display_folded = true
transform = Transform( 120, 0, 0, 0, 1, 0, 0, 0, 100, 0, 96.4986, -101.898 )
script = ExtResource( 11 )

[node name="Roof1" type="MeshInstance" parent="Roof" index="0"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0208416 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 5 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="StaticBody" type="StaticBody" parent="Roof/Roof1" index="0"]

editor/display_folded = true
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Roof/Roof1/StaticBody" index="0"]

shape = SubResource( 6 )
disabled = false

[node name="Roof2" type="MeshInstance" parent="Roof" index="1"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.02989 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 5 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="StaticBody" type="StaticBody" parent="Roof/Roof2" index="0"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Roof/Roof2/StaticBody" index="0"]

shape = SubResource( 7 )
disabled = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Roof" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/close = SubResource( 8 )
anims/open = SubResource( 9 )
blend_times = [  ]

[node name="Ground" type="Spatial" parent="." index="20"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 96.4986, -101.898 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="Ground" index="0"]

editor/display_folded = true
transform = Transform( 200, 0, 0, 0, 1, 0, 0, 0, 200, 0, 4.37466, -189.514 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 10 )
skeleton = NodePath("..")
material/0 = SubResource( 11 )
_sections_unfolded = [ "Transform", "material" ]

[node name="StaticBody" type="StaticBody" parent="Ground/MeshInstance" index="0"]

editor/display_folded = true
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/MeshInstance/StaticBody" index="0"]

shape = SubResource( 12 )
disabled = false

[node name="MeshInstance2" type="MeshInstance" parent="Ground" index="1"]

editor/display_folded = true
transform = Transform( 200, 0, 0, 0, 1, 0, 0, 0, 200, 0, 4.14514, 396.273 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 10 )
skeleton = NodePath("..")
material/0 = SubResource( 11 )
_sections_unfolded = [ "Transform", "material" ]

[node name="StaticBody" type="StaticBody" parent="Ground/MeshInstance2" index="0"]

editor/display_folded = true
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/MeshInstance2/StaticBody" index="0"]

shape = SubResource( 12 )
disabled = false

[node name="MeshInstance3" type="MeshInstance" parent="Ground" index="2"]

editor/display_folded = true
transform = Transform( -100, 0, 173.205, 0, 1, 0, -173.205, 0, -100, -256.004, 2.2197, 247.431 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 10 )
skeleton = NodePath("..")
material/0 = SubResource( 11 )
_sections_unfolded = [ "Transform", "material" ]

[node name="StaticBody" type="StaticBody" parent="Ground/MeshInstance3" index="0"]

editor/display_folded = true
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/MeshInstance3/StaticBody" index="0"]

shape = SubResource( 12 )
disabled = false

[node name="MeshInstance4" type="MeshInstance" parent="Ground" index="3"]

editor/display_folded = true
transform = Transform( -100, 0, 173.205, 0, 1, 0, -173.205, 0, -100, 265.734, 2.60526, -23.5667 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 10 )
skeleton = NodePath("..")
material/0 = SubResource( 11 )
_sections_unfolded = [ "Transform", "material" ]

[node name="StaticBody" type="StaticBody" parent="Ground/MeshInstance4" index="0"]

editor/display_folded = true
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/MeshInstance4/StaticBody" index="0"]

shape = SubResource( 12 )
disabled = false

[node name="MeshInstance5" type="MeshInstance" parent="Ground" index="4"]

editor/display_folded = true
transform = Transform( -100, 0, -173.205, 0, 1, 0, 173.205, 0, -100, 262.682, 3.71893, 232.599 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 10 )
skeleton = NodePath("..")
material/0 = SubResource( 11 )
_sections_unfolded = [ "Transform", "material" ]

[node name="StaticBody" type="StaticBody" parent="Ground/MeshInstance5" index="0"]

editor/display_folded = true
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/MeshInstance5/StaticBody" index="0"]

shape = SubResource( 12 )
disabled = false

[node name="MeshInstance6" type="MeshInstance" parent="Ground" index="5"]

editor/display_folded = true
transform = Transform( -100, 0, -173.205, 0, 1, 0, 173.205, 0, -100, -289.081, 3.71893, 15.3971 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 10 )
skeleton = NodePath("..")
material/0 = SubResource( 11 )
_sections_unfolded = [ "Transform", "material" ]

[node name="StaticBody" type="StaticBody" parent="Ground/MeshInstance6" index="0"]

editor/display_folded = true
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/MeshInstance6/StaticBody" index="0"]

shape = SubResource( 12 )
disabled = false

[node name="RoofSwitch" parent="." index="21" instance=ExtResource( 12 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.114683, 0 )

[node name="WinBox" type="Area" parent="." index="22"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 128.171, 0 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="WinBox" index="0"]

shape = SubResource( 13 )
disabled = false


